--- a/requirements.txt
+++ b/requirements.txt
@@ -16,3 +16,7 @@ pydantic_core==2.18.4
 SQLAlchemy==2.0.30
 typing_extensions==4.12.1
 yarl==1.9.4
+asyncpg==0.30.0
+greenlet==3.1.1
+openpyxl==3.1.5
+et-xmlfile==2.0.0
